Fix spacing for close button in IntroductionBanner.

--- a/plugins/woocommerce-admin/client/marketing/overview-multichannel/IntroductionBanner/IntroductionBanner.scss
+++ b/plugins/woocommerce-admin/client/marketing/overview-multichannel/IntroductionBanner/IntroductionBanner.scss
@@ -36,7 +36,7 @@
 
 		.woocommerce-marketing-introduction-banner-close-button {
 			position: absolute;
-			top: $gap-smaller;
+			top: $gap-small;
 			right: $gap;
 			padding: 0;
 		}
